<resources>

    <string name="app_name">Syncasts</string>

    <string name="title_tab_discover">Discover</string>
    <string name="title_tab_subscriptions">Subscriptions</string>
    <string name="title_theme_primary">Primary color</string>
    <string name="title_theme_accent">Accent Color</string>
    <string name="title_dialog_error">Sorry</string>

    <string name="label_show_notes">Show Notes</string>
    <string name="label_description">Description</string>
    <string name="label_episodes_count">%1$d episodes</string>

    <string name="message_deleted_episode">Deleted episode</string>
    <string name="message_no_search_results">No results for\n“%1$s”</string>

    <string name="error_playing_episode">There was an problem playing the episode</string>
    <string name="error_no_network">No Internet found. Check your connection and try again.</string>

    <string name="search_hint">Search by name or topic</string>

    <string name="action_search">Search</string>
    <string name="action_try_connect">Try again</string>
    <string name="action_skip">Skip</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_change_country">Change country</string>
    <string name="action_selected_one">%1$s selected</string>
    <string name="action_selected_many">%1$s selected</string>
    <string name="action_download">Download</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_back">Back</string>
    <string name="action_played">Played</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unplayed">Unplayed</string>
    <string name="action_settings">Settings</string>

    <string name="australia">Australia</string>
    <string name="belgium">Belgium</string>
    <string name="brazil">Brazil</string>
    <string name="canada">Canada</string>
    <string name="china">China</string>
    <string name="denmark">Denmark</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="norway">Norway</string>
    <string name="russia">Russia</string>
    <string name="spain">Spain</string>
    <string name="sweden">Sweden</string>
    <string name="switzerland">Switzerland</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>

    <string name="format_time" translatable="false">%1$s:%2$s</string>
    <string name="format_time_hours" translatable="false">%1$s:%2$s:%3$s</string>
    <plurals name="format_hours_mins_size">
        <item quantity="one">%1$d Hours %02$d Mins (%3$s)</item>
        <item quantity="other">%1$d Hour %02$d Mins (%3$s)</item>
    </plurals>
    <string name="format_min_size" translatable="false">%01$d Mins (%2$s)</string>

    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="transition_shot" translatable="false">shot</string>
    <string name="transition_shot_background" translatable="false">shot_background</string>

    <string name="pref_country_key" translatable="false">country</string>
    <string name="pref_key_color_primary" translatable="false">Theme.presetColorPrimary</string>
    <string name="pref_key_color_accent" translatable="false">Theme.presetColorAccent</string>
    <string name="pref_key_color_base" translatable="false">Theme.baseTheme</string>

</resources>
