<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:fitsSystemWindows="false"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoInitialState="hidden"
    sothree:umanoAnchorPoint="0.7"
    sothree:umanoShadowHeight="0dp"
    sothree:umanoOverlay="true"
    sothree:umanoDragView="@+id/drag_panel"
    sothree:umanoScrollableView="@+id/scroll">

    <!-- MAIN CONTENT -->
    <FrameLayout
        android:id="@+id/container_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/scrim"  />

        <FrameLayout
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:outlineProvider="bounds"
            android:elevation="@dimen/app_bar_elevation"
            android:transitionGroup="false"
            android:theme="@style/SearchViewTheme">

            <View
                android:id="@+id/search_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary" />

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:imeOptions="actionSearch|flagNoExtractUi|flagNoFullscreen"
                android:queryHint="@string/search_hint"
                android:transitionGroup="true" />

            <!-- wrapping layout needed for the touch ripple -->
            <FrameLayout
                android:id="@+id/searchback_container"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:paddingStart="4dp"
                android:background="@android:color/transparent">

                <ImageButton
                    android:id="@+id/searchback"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:tint="@android:color/white"
                    android:transitionName="@string/transition_search_back"
                    android:contentDescription="@string/action_back"
                    app:srcCompat="@drawable/ic_arrow_back_padded" />

            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/results_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:background="@color/background"
            android:elevation="@dimen/app_bar_elevation">

            <ProgressBar
                android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_huge"
                android:paddingBottom="@dimen/spacing_huge"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="?android:colorAccent"
                android:indeterminateTintMode="src_in" />

            <ViewStub
                android:id="@+id/stub_no_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/no_search_results" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarStyle="outsideOverlay"
                android:clipToPadding="false"
                android:visibility="gone" />

            <View
                android:id="@+id/results_scrim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/scrim"
                android:visibility="gone" />

        </FrameLayout>

    </FrameLayout>

    <!-- SLIDING LAYOUT -->
    <fragment
        android:id="@+id/fragment_itunes_podcast_details"
        android:name="com.alchemist.syncasts.ui.podcastdetails.ItunesPodcastDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/fragment_podcast_details" />

</com.sothree.slidinguppanel.SlidingUpPanelLayout>